test/valid/66128_boolean_short_circuit_or_side_effect/boolean_short_circuit_or_side_effect.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit =
    var x : Int = 0;
    true || (x = 10);
    print(x)