test/invalid-semantics/58196_wrong_var_type/wrong_var_type.mag
-- Author: 58196, Pedro Lopes

fun main (_) : Unit -> Unit =
  var flag : Int = 0;
  flag = true;
  print(flag)